--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": ">=5.6.4",
         "laravel/framework": "5.4.*",
+        "barryvdh/laravel-cors": "0.8.x",
         "laravel/tinker": "~1.0",
         "tymon/jwt-auth": "dev-master"
     },
