--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,10 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
-        "laravel/framework": "5.4.*",
         "barryvdh/laravel-cors": "0.8.x",
+        "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
+        "pusher/pusher-php-server": "^3.0",
         "tymon/jwt-auth": "dev-master"
     },
     "require-dev": {
