--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "laravel-mix": "^0.6.0",
     "lodash": "^4.16.2",
     "vue": "^2.0.1"
+  },
+  "dependencies": {
+    "laravel-echo": "^1.3.2",
+    "pusher-js": "^4.1.0"
   }
 }
