--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
         "maatwebsite/excel": "~2.1.0",
+        "nesbot/carbon": "^1.24",
         "pusher/pusher-php-server": "^3.0",
         "tymon/jwt-auth": "dev-master"
     },
